Closed
Bug 260803
Opened 21 years ago
Closed 21 years ago
Allow localization of 'Click here to get the plugin' string in content generated for missing plugin
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: p.franc, Assigned: doronr)
References
Details
(Keywords: fixed-aviary1.0, late-l10n)
Attachments
(1 file, 2 obsolete files)
|
2.61 KB,
patch
|
benjamin
:
review+
jst
:
superreview+
benjamin
:
approval-aviary+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.7.3) Gecko/20040913 Firefox/0.10
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; rv:1.7.3) Gecko/20040913 Firefox/0.10
npnul plugin contains several english string that are in corresponding resource
files:
http://lxr.mozilla.org/aviarybranch/source/modules/plugin/samples/default/windows/npnul32.rc
http://lxr.mozilla.org/aviarybranch/source/modules/plugin/samples/default/os2/npnulos2.rc
http://lxr.mozilla.org/aviarybranch/source/modules/plugin/samples/default/unix/nullplugin.h
To allow full localization of FF move them to locale dependant file and setup
the build procces to build npnul.* locale dependant
Reproducible: Always
Steps to Reproduce:
1. Use the l10n version of FF
2. Go to a page that requires missing plugin.
3. "Click here to get the plugin" message appears
Comment 1•21 years ago
|
||
This is probably WONTFIX for 1.0, and perhaps forever. The new plugin finder
service hides the null plugin by default, I think.
Assignee: bryner → nobody
Component: Build Config → Plug-ins
Product: Firefox → Browser
QA Contact: asa → core.plugins
Version: unspecified → Trunk
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•21 years ago
|
||
Yeah, but there's one localizable string in it too, the text "Click here to
download plugin" is static in the code. Do we care for 1.0? IMO no...
| Reporter | ||
Comment 3•21 years ago
|
||
The "Click here to get the plugin." localization problem can be also fixed by
fixing bug 83754 and moving this string into .dtd file.
Summary: Build npnul plugin locale dependant → Allow localization of 'Click here to get the plugin' string in PFS / npnul plugin
Comment 4•21 years ago
|
||
Firefox doesn't use the default plugin any more, so bug 83754 doesn't apply to
Firefox any more.
| Reporter | ||
Comment 5•21 years ago
|
||
> Firefox doesn't use the default plugin any more, so bug 83754 doesn't apply to
> Firefox any more.
Ok. Please, clarify the summary and dependences to clearly identify this bug
with the request to be able to translate the somewhere hard-coded english
sentence that is displayed at the place of missing plugin. Thanks.
Updated•21 years ago
|
Summary: Allow localization of 'Click here to get the plugin' string in PFS / npnul plugin → Allow localization of 'Click here to get the plugin' string in content generated for missing plugin
Comment 6•21 years ago
|
||
Assignee: nobody → doronr
| Assignee | ||
Comment 7•21 years ago
|
||
| Assignee | ||
Comment 8•21 years ago
|
||
Attachment #160662 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #160664 -
Flags: review?(bsmedberg)
Attachment #160664 -
Flags: approval-aviary?
| Assignee | ||
Comment 9•21 years ago
|
||
Attachment #160664 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #160665 -
Flags: review?(bsmedberg)
Attachment #160665 -
Flags: approval-aviary?
| Assignee | ||
Updated•21 years ago
|
Attachment #160664 -
Flags: review?(bsmedberg)
Attachment #160664 -
Flags: approval-aviary?
Updated•21 years ago
|
Attachment #160665 -
Flags: review?(bsmedberg)
Attachment #160665 -
Flags: review+
Attachment #160665 -
Flags: approval-aviary?
Attachment #160665 -
Flags: approval-aviary+
Comment 10•21 years ago
|
||
Comment on attachment 160665 [details] [diff] [review]
even better
+ // get the localized text
+ nsXPIDLString missingPluginLabel;
+ missingPluginLabel = NS_LITERAL_STRING("Click here to download plugin.");
+
+ nsCOMPtr<nsIStringBundleService> stringBundleService =
+ do_GetService(NS_STRINGBUNDLE_CONTRACTID);
+
+ if (stringBundleService) {
[...]
+ rv =
stringBundle->GetStringFromName(NS_LITERAL_STRING("missingPlugin.label").get(),
+ getter_Copies(missingPluginLabel));
+ if (NS_FAILED(rv))
+ missingPluginLabel = NS_LITERAL_STRING("Click here to download
plugin.");
+ }
How about eliminating the duplication of the literal by changing that to
something like:
+ // get the localized text
+ nsXPIDLString missingPluginLabel;
+
+ nsCOMPtr<nsIStringBundleService> stringBundleService =
+ do_GetService(NS_STRINGBUNDLE_CONTRACTID);
+
+ if (stringBundleService) {
[...]
+ rv =
stringBundle->GetStringFromName(NS_LITERAL_STRING("missingPlugin.label").get(),
+ getter_Copies(missingPluginLabel));
+ }
+
+ if (!stringBundleService || NS_FAILED(rv)) {
+ missingPluginLabel = NS_LITERAL_STRING("Click here to download plugin.");
+ }
sr=jst with such a change.
Attachment #160665 -
Flags: superreview+
| Assignee | ||
Comment 11•21 years ago
|
||
fixed.
Updated•21 years ago
|
Keywords: fixed-aviary1.0
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•