bug 260803 - make new missing plugin text localizable. sr=jst,r/a=bsmedberg